[gd_scene load_steps=8 format=3 uid="uid://cnr6eq1yf1k0o"]

[ext_resource type="Script" uid="uid://dhwcyr8mwo5x5" path="res://Scripts/main_menu.gd" id="1_4geyq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jwo76"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nkug2"]
bg_color = Color(1, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x2hje"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ykye"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gc0em"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cj1lu"]
bg_color = Color(0.24477637, 0.2447764, 0.24477637, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -231.0
offset_top = -110.5
offset_right = 231.0
offset_bottom = 110.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jwo76")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "Windowed Mode:"
horizontal_alignment = 1

[node name="Full_Screen" type="Button" parent="VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_nkug2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_x2hje")
toggle_mode = true
text = "               "

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3ykye")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Audio Volume"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gc0em")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Screen Resolution"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/PanelContainer3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
alignment = 1
selected = 0
item_count = 3
popup/item_0/text = "Beeg"
popup/item_0/id = 0
popup/item_1/text = "Beeger"
popup/item_1/id = 1
popup/item_2/text = "Beegest"
popup/item_2/id = 2

[node name="PanelContainer4" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cj1lu")

[node name="Return_To_Menu" type="Button" parent="VBoxContainer/PanelContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "BACK TO MAIN MENU"
script = ExtResource("1_4geyq")

[connection signal="toggled" from="VBoxContainer/PanelContainer/HBoxContainer/Full_Screen" to="VBoxContainer/PanelContainer4/Return_To_Menu" method="_on_full_screen_toggled"]
[connection signal="pressed" from="VBoxContainer/PanelContainer4/Return_To_Menu" to="VBoxContainer/PanelContainer4/Return_To_Menu" method="_on_return_to_menu_pressed"]
